footer align fix

--- a/src/less/blocks/page-footer.less
+++ b/src/less/blocks/page-footer.less
@@ -32,7 +32,7 @@
     &__inner {
       min-width: @screen-sm;
       display: flex;
-      justify-content: center;
+      align-items: center;
     }
 
     &__address {
@@ -69,7 +69,7 @@
     &__inner {
       width: @screen-md;
       display: flex;
-      justify-content: center;
+      align-items: center;
     }
 
     &__address {
